--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background-color: lightblue;
+    background-color: gray;
 }
 
 div {
     padding: 5px;
+    text-align: center;
     
 }
-
+.center{
+    text-align: center;
+}
