--- a/app.component.html
+++ b/app.component.html
@@ -3,14 +3,14 @@
 
   <div>
 
- <h2 class="center" >create sales request </h2>
- <div class="center">Name: <input type="text" [value]="name"        (input)="name=$event.target.value"><br></div>
+ <h2 class="center" style="background-color:aliceblue">create sales request </h2>
+ <div class="center" style="color:lightskyblue">Name: <input id="name" type="text" [value]="name"        (input)="name=$event.target.value"><br></div>
  
- <div class="center">Quality: <input type="text" [value]="quality"  (input)="quality=$event.target.value"><br></div>
+ <div class="center" style="color:lightskyblue">Quality: <input id="quality" type="text" [value]="quality"  (input)="quality=$event.target.value"><br></div>
  
- <div class="center">Quantity: <input type="text" [value]="quantity"(input)="quantity=$event.target.value"><br></div>
+ <div class="center" style="color:lightskyblue">Quantity: <input id="quantity" type="text" [value]="quantity"(input)="quantity=$event.target.value"><br></div>
  
- <div class="center">Price: <input type="text" [value]="price"      (input)="price=$event.target.value"><br></div>
+ <div class="center" style="color:lightskyblue">Price: <input id="price" type="text" [value]="price"      (input)="price=$event.target.value"><br></div>
  
  
  <button (click)="add()" class="center" style="border-color:aqua">Submit</button>
@@ -28,18 +28,43 @@
 <!-- 
 <td><input type="text" [value]="x.text" (input)="x.text=$event.target.value" [disabled]="!x.isEditable"/></td> -->
 
-<td>{{x.name}}</td>
-<td>{{x.price}}</td>
-<td>{{x.quality}}</td>
-<td>{{x.quantity}}</td>
-
-<td><button class="btn btn-danger"(click)="deleteFieldValue(i)">Delete</button></td>
-
-<td><button (click)="x.isEditable=!x.isEditable" *ngIf="!x.isEditable">Edit</button>
-
-<button *ngIf="x.isEditable" (click)="x.isEditable=!x.isEditable">Save</button>
-
+<td *ngIf="i == editRowId"> 
+  <input type="text" #input1  [(ngModel)]="x.name">
 </td>
+<td *ngIf="i !== editRowId" >
+ {{x.name}}
+</td>
+<td *ngIf="i == editRowId"> 
+  <input id="editName" type="text" [(ngModel)]="x.quality">
+</td>
+<td *ngIf="i !== editRowId" >
+ {{x.quality}}
+</td>
+<td *ngIf="i == editRowId"> 
+  <input type="text" [(ngModel)]="x.quantity">
+</td>
+<td *ngIf="i !== editRowId" >
+ {{x.quantity}}
+</td>
+<td *ngIf="i == editRowId"> 
+  <input type="text" [(ngModel)]="x.price">
+</td>
+<td *ngIf="i !== editRowId" >
+ {{x.price}}
+</td>
+
+<td><button class="btn btn-danger" (click)="deleteFieldValue(i)" style="border-color:red">Delete</button></td>
+
+<!-- <td><button class="btn btn-success" (click)="x.isEditable=!x.isEditable" style="border-color:blue" *ngIf="!x.isEditable">Edit</button> -->
+
+  <td><button class="btn btn-success" (click)="changeRowEdit(i)" style="border-color:blue" *ngIf="i != editRowId">Edit</button>
+
+  <!-- <button *ngIf="x.isEditable" (click)="x.isEditable=!x.isEditable">Save</button> -->
+  <button *ngIf="i == editRowId" (click)="save(i,x);editRowId='NA'">Save</button>
+
+
+    
+
 
 </tr>
 
